--- a/images/index.html
+++ b/images/index.html
@@ -39,15 +39,18 @@
     <input type="file" id="image" accept="image/jpeg" required>
     <button type="submit">Upload</button>
   </form>
+
   <script>
     document.getElementById('uploadForm').addEventListener('submit', async function(e) {
       e.preventDefault();
       
+      // Clear previous messages
       document.getElementById('result').innerHTML = '';
       document.getElementById('error').innerHTML = '';
   
       const file = document.getElementById('image').files[0];
   
+      // Validate file
       if (!file) {
         document.getElementById('error').innerHTML = 'Please select a file to upload.';
         return;
@@ -58,8 +61,9 @@
         return;
       }
   
+      // ✅ Declare formData here (outside try block)
       const formData = new FormData();
-      formData.append('file', file); // ← send blob directly
+      formData.append('file', file);
       formData.append('filename', 'image_to_change.jpg');
       formData.append('mimeType', 'image/jpeg');
   
@@ -88,6 +92,9 @@
       }
     });
   </script>
+  
+
+
   
   <p id="result"></p>
   <p id="error" class="error"></p>
