--- a/images/index.html
+++ b/images/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Upload Image to Google Drive</title>
+  <title>Upload images to Google Drive</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,11 +32,11 @@
   </style>
 </head>
 <body>
-  <h2>Upload Image (SearchSmart)</h2>
-  <p>Only JPG format is allowed. Uploaded image will replace image_to_change.jpg.</p>
+  <h2>Upload images (SearchSmart)</h2>
+  <p>Only JPG format is allowed. Uploaded images will replace image_to_change.jpg.</p>
   
   <form id="uploadForm">
-    <input type="file" id="image" accept="image/jpeg" required>
+    <input type="file" id="images" accept="images/jpeg" required>
     <button type="submit">Upload</button>
   </form>
 
@@ -48,7 +48,7 @@
       document.getElementById('result').innerHTML = '';
       document.getElementById('error').innerHTML = '';
   
-      const file = document.getElementById('image').files[0];
+      const file = document.getElementById('images').files[0];
   
       // Validate file
       if (!file) {
@@ -56,7 +56,7 @@
         return;
       }
   
-      if (file.type !== 'image/jpeg') {
+      if (file.type !== 'images/jpeg') {
         document.getElementById('error').innerHTML = 'Only JPG/JPEG files are allowed.';
         return;
       }
@@ -65,7 +65,7 @@
       const formData = new FormData();
       formData.append('file', file);
       formData.append('filename', 'image_to_change.jpg');
-      formData.append('mimeType', 'image/jpeg');
+      formData.append('mimeType', 'images/jpeg');
   
       try {
         document.getElementById('result').innerHTML = 'Uploading...';
@@ -80,8 +80,8 @@
   
         if (resultText.startsWith('http')) {
           document.getElementById('result').innerHTML = 
-            `<span class="success">✅ Image successfully uploaded as image_to_change.jpg</span><br>` +
-            `<a href="${resultText}" target="_blank">View Uploaded Image</a>`;
+            `<span class="success">✅ images successfully uploaded as image_to_change.jpg</span><br>` +
+            `<a href="${resultText}" target="_blank">View Uploaded images</a>`;
         } else {
           document.getElementById('error').innerHTML = resultText;
           document.getElementById('result').innerHTML = '';
